--- a/2020/project4/package.json
+++ b/2020/project4/package.json
@@ -1,13 +1,14 @@
 {
   "name": "project4",
   "version": "1.0.0",
-  "description": " ",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "style-watch": "sass --watch ./network/static/network/styles.scss:./network/static/network/styles.css",
-    "watch": "webpack --mode development ./network/src/index.js -o ./network/static/network --watch",
-    "dev": "webpack --mode development ./network/src/index.js -o ./network/static/network",
-    "build": "webpack --mode production ./network/src/index.js -o ./network/static/network"
+    "sass:compile": "node-sass ./network/static/network/styles.scss ./network/static/network/styles.css",
+    "sass:watch": "node-sass --watch ./network/static/network/styles.scss ./network/static/network/styles.css",
+    "dev-watch": "webpack --mode development --entry ./network/src/index.js -o ./network/static/network --watch",
+    "dev": "webpack --mode development --entry ./network/src/index.js -o ./network/static/network",
+    "build": "webpack --mode production --entry ./network/src/index.js -o ./network/static/network"
   },
   "author": "",
   "license": "ISC",
@@ -17,12 +18,11 @@
     "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.2.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "node-sass": "^5.0.0",
     "webpack": "^5.5.1",
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
-    "install": "^0.13.0",
-    "npm": "^6.14.9",
     "pluralize": "^8.0.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.7",
